# dsnet_cpp_inference

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  HANDWRITTEN_IMPLEMENTATION.md  INFERENCE_RESULT_DESIGN.md  PYTORCH_TO_CPP_GUIDE.md  README.md  build.sh  build_dsnet.sh  inference_example.cpp
Data/: camera_info.yaml
include/: dsnet_inference.h
include/dsnet_inference/: dsnet_diffusion_model.h  dsnet_inference.h  dsnet_inference_result.h  dsnet_model_loader.h  dsnet_pointnet_backbone.h  dsnet_utils.h
include/test/: test.h  test_pointnet2.h
include/utils/: utils.h
pyinference/: camera_info.py  export_weights.py  inference.py  inference.sh  preprocess.py  run_inference_example.py
pyinference/diffusion_suctionnet_model/: PACKAGING_GUIDE.md  build.sh
pyinference/diffusion_suctionnet_model/data/: pointcloud_transforms.py
pyinference/diffusion_suctionnet_model/diffusers/: __init__.py
pyinference/diffusion_suctionnet_model/diffusers/schedulers/: __init__.py  scheduling_ddim.py
pyinference/diffusion_suctionnet_model/utils/: __init__.py  train_helper.py
pyinference/example/: README_INFERENCE.md  inference.py
pyinference/example/diffusion_suctionnet_model/: MANIFEST.in  README.md  __init__.py  model.py  pyproject.toml  requirements.txt  setup.py  test_package.py
pyinference/example/diffusion_suctionnet_model/data/: __init__.py  dataset_plus.py
pyinference/example/pointnet2_ops_lib/pointnet2_ops/: pointnet2_modules.py
pyinference/pointnet2_ops_lib/: setup.py
pyinference/pointnet2_ops_lib/pointnet2_ops/: pointnet2_utils.py
scripts/: convert_model_to_torchscript.py
src/: dsnet_diffusion_model.cpp  dsnet_inference.cpp  dsnet_inference_result.cpp  dsnet_pointnet_backbone.cpp  dsnet_utils.cpp  test.cpp  test_pointnet_algorithms.cpp  test_weight_loading.cpp  weight_loader_utils.cpp
src/dsnet/: dsnet_diffusion_model.cpp  dsnet_inference.cpp  dsnet_inference_result.cpp  dsnet_model_loader.cpp  dsnet_utils.cpp  weight_loader_utils.cpp
src/pointnet2/: dsnet_pointnet_backbone.cpp
src/pointnet2/cuda/: utils_interpolation_cuda.cu
src/test/: test.cpp  test_dsnet.cpp  test_inference_result.cpp  test_pointnet2.cpp
